[package]
name = "ai-ripgrep"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = "4.5.13"
dirs-next = "2.0.0"
openai = "1.0.0-alpha.15"
ripgrep = { version = "14.1.0", features = ["pcre2", "simd-accel"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[[bin]]
name="arg"
path = "src/main.rs"
